src/styles/photoDetails.css
.photo-data-display {
    display: flex;
    flex-direction: row;
}

.title-and-photo {
    display: flex;
    flex-direction: row;
    align-items: start;
}

.photo-title {
    font-family: "Orbitron", system-ui;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    color: rgba(0, 0, 0, 0.295);
}

.exif-symbol-group {
    display: flex;
    flex-direction: row;
}

.exif-symbols {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.5rem;
    margin: 0.15rem 0.75rem;
}

.exif-double {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.exif-data {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    font-family: "Quicksand", system-ui;
    font-size: 1rem;
}

